Integracion de sitio, css

--- a/menu.html
+++ b/menu.html
@@ -25,41 +25,21 @@
         </div>
     </header>
     <main>
-        <h1 class="bienvenida"> Hola! Bienvenidos a MALU ~ Madera Lúdica ~</h1>
+        <h1 class="bienvenida"> Menú de consulta</h1>
         <br>
-        <h2 class="bienvenida">Te invitamos a explorar nuestros juegos para integrar y acompañar a nuestras infancias
-        </h2>
+        
         <br>
+        <div class="contenedor-app">
 
-        <div class="contenedormain">
-            <div class="caja">
-                <img class="img-prod" src="img/tablaindex.jpeg" alt="tablas sensoriales">
-                <h4>Tablas Sensoriales</h4>
-                <br>
-
-                <p>El juego y la interacción con la tabla ayuda a mejorar la motricidad fina, la atención, y extiende
-                    los tiempos de atención</p>
-                <br><br>
-                <a href="products.html#tablas">Ver más</a>
-            </div>
-
-            <div class="caja">
-                <img class="img-prod" src="img/bloques.jpg" alt="Bloques de construccion">
-                <h4>Juegos de Construcción</h4>
-                <br>
-                <p>Además de jugar ayudan a ejercitar la motricidad y estimular la creatividad</p>
-                <br><br>
-                <a href="products.html#bloques">Ver más</a>
-            </div>
-
-            <div class="caja" id="prueba">
-                <img class="img-prod" src="img/box.jpg" alt="box">
-                <h4>Set Temático</h4>
-                <br>
-                <p>Ideal para aprender y divertirse a lo GRANDE</p>
-                <br><br>
-                <a href="products.html#box">Ver más</a>
-            </div>
+            <table>
+                <tr><td class="contenedor-centrado"><a href="altas.html">Alta de productos</a></td></tr>
+                <tr><td class="contenedor-centrado "><a href="listado.html">Listado de productos</a></td></tr>
+                <tr><td class="contenedor-centrado "><a href="modificaciones.html">Modificar datos de productos</a></td></tr>
+                <tr><td class="contenedor-centrado "><a href="listadoEliminar.html">Eliminar productos</a></td></tr>
+                <tr><td class="contenedor-centrado "><a href="carrito.html">Carrito de compras</a></td></tr>
+            </table>
+        </div>
+        
 
         </div>
     </main>
