--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/home.css">
     <link rel="icon" type="image/vnd.microsoft.icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/home.css">
     <a href="https://www.flaticon.es/iconos-gratis/instagram" title="instagram iconos"></a>
@@ -14,7 +15,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="img/MALU.png" alt="Madera lúdica">
+            <img src="img/MALU.png" alt="Madera lúdica" height="5">
         </div>
         <div class="navbar">
             <a href="index.html" class="nav-elem">Home</a>
@@ -25,45 +26,43 @@
         </div>
     </header>
     <main>
-        <h1 class="bienvenida"> Hola! Bienvenidos a MALU ~ Madera Lúdica ~</h1>
-        <br>
-        <h2 class="bienvenida">Te invitamos a explorar nuestros juegos para integrar y acompañar a nuestras infancias
-        </h2>
-        <br>
+        <div class="contac">
+            <h3>Contactanos!!!</h3>
+            <h4>Si deseas hacernos cualquier consulta, completa el siguente fomulario y te contestamos a la brevedad!</h4>
+        </div>
+        <br><br>
+        <div class="contacto">
+        <form action="" name="formulario" method="get">
+            <label for="nombre">Nombre: <br>
+            </label><input size="30" type="text" name="nombre" id="nombre"> 
+            <br>
+            <br>
+            <label for="mail">Mail: <br>
+            </label><input type="email" name="mail" id="mail"> 
+            <br>
+            <br>
+            <label for="telefono">Telefono (Opcional): <br>
+            </label><input type="tel" name="telefono" id="telefono"> 
+            <br>
+            <br>
+            <label for="comentarios">Comentarios: <br> </label> <textarea name="comentarios" rows="10"cols="30" id="comentarios"></textarea>
+            <br>
+            <br>
+            <input type="submit" value="Enviar">
+        </form>
+    
+        </div>
+        <br><br><br>
 
-        <div class="contenedormain">
-            <div class="caja">
-                <img class="img-prod" src="img/tablaindex.jpeg" alt="tablas sensoriales">
-                <h4>Tablas Sensoriales</h4>
-                <br>
+        <script src="JS/script.js"></script>
 
-                <p>El juego y la interacción con la tabla ayuda a mejorar la motricidad fina, la atención, y extiende
-                    los tiempos de atención</p>
-                <br><br>
-                <a href="products.html#tablas">Ver más</a>
-            </div>
+        <div class="ubicacion">
+            <h4>UBICACION (Zona Martinez)</h4>
+            <Br></Br>
 
-            <div class="caja">
-                <img class="img-prod" src="img/bloques.jpg" alt="Bloques de construccion">
-                <h4>Juegos de Construcción</h4>
-                <br>
-                <p>Además de jugar ayudan a ejercitar la motricidad y estimular la creatividad</p>
-                <br><br>
-                <a href="products.html#bloques">Ver más</a>
-            </div>
-
-            <div class="caja" id="prueba">
-                <img class="img-prod" src="img/box.jpg" alt="box">
-                <h4>Set Temático</h4>
-                <br>
-                <p>Ideal para aprender y divertirse a lo GRANDE</p>
-                <br><br>
-                <a href="products.html#box">Ver más</a>
-            </div>
-
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26306.873769448182!2d-58.51523639999999!3d-34.49377630000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb05662e4a08d%3A0x9811553c3a21048c!2sMart%C3%ADnez%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1683776560733!5m2!1ses-419!2sar" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </main>
-
     <footer>
         <div class="contenedorfooter">
             <div class="foot">
@@ -81,8 +80,6 @@
                     <li><a href="nosotros.html" class="footer-link">Quienes somos?</a></li>
                     <li><a href="contacto.html" class="footer-link">Contacto</a></li>
                 </ul>
-
-
             </div>
         </div>
     </footer>
