--- a/menu.html
+++ b/menu.html
@@ -36,7 +36,7 @@
                 <tr><td class="contenedor-centrado "><a href="listado.html">Listado de productos</a></td></tr>
                 <tr><td class="contenedor-centrado "><a href="modificaciones.html">Modificar datos de productos</a></td></tr>
                 <tr><td class="contenedor-centrado "><a href="listadoEliminar.html">Eliminar productos</a></td></tr>
-                <tr><td class="contenedor-centrado "><a href="carrito.html">Carrito de compras</a></td></tr>
+                <!-- <tr><td class="contenedor-centrado "><a href="carrito.html">Carrito de compras</a></td></tr> -->
             </table>
         </div>
         
